# AoC-2024-Cpp

./: .gitignore  CMakeLists.txt  default.nix  main.cpp  shell.nix
days/: base.cpp  base.h  day01.cpp  day01.h  day02.cpp  day02.h  day03.1.cpp  day03.1.h  day03.2.cpp  day03.2.h  day03.cpp  day03.h  day04.cpp  day04.h  day05.cpp  day05.h
